--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,16 @@
             <artifactId>spring-context</artifactId>
             <version>4.3.12.RELEASE</version>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
         </dependency>
 
     </dependencies>
